#181: Fix register captcha alert icon to be aligned in middle.

--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -368,6 +368,9 @@
         border: 1px solid #ccc;
         border-left: none;
         border-radius: 0 $border-radius $border-radius 0;
+        .field i {
+          margin-top: 11px;
+        }
         .refresh {
           float: left;
           width: 30px;
